--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,7 @@
 /Java/CondicionalEjercicio_2/build/
 /Java/CondicionalEjercicio_3/nbproject/private/
 /Java/CondicionalEjercicio_3/build/
+/Java/Leccion2/CicloWhile/nbproject/private/
+/Java/Leccion2/CicloWhile/build/
+/Java/Leccion2/EjercicioCiclos01/nbproject/private/
+/Java/Leccion2/EjercicioCiclos01/build/
