--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,10 @@
 /Java/Leccion2/CicloWhile/build/
 /Java/Leccion2/EjercicioCiclos01/nbproject/private/
 /Java/Leccion2/EjercicioCiclos01/build/
+/Java/Leccion2/EjercicioCiclos03/nbproject/private/
+/Java/Leccion2/EjercicioCiclos03/build/
+/Java/Leccion2/EjercicioCiclo04/nbproject/private/
+/Java/Leccion2/EjercicioCiclo04/build/
+/Java/Leccion2/LeccionClasesObjetos/nbproject/private/
+/Java/Leccion2/EjercicioCiclos05/nbproject/private/
+/Java/Leccion2/EjercicioCiclos05/build/
