--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@
 /Java/Leccion2/LeccionClasesObjetos/nbproject/private/
 /Java/Leccion2/EjercicioCiclos05/nbproject/private/
 /Java/Leccion2/EjercicioCiclos05/build/
+/Java/Leccion2/LeccionClasesObjetos/build/
