--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@
 /Java/Leccion2/EjercicioCiclos05/nbproject/private/
 /Java/Leccion2/EjercicioCiclos05/build/
 /Java/Leccion2/LeccionClasesObjetos/build/
+/Java/Ejercicio_7/build/
